Update: Added receipt functionality and improved UI styles

--- a/App.xaml
+++ b/App.xaml
@@ -7,7 +7,9 @@
         <!-- Ensure the required resource dictionaries are merged -->
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                
+                <ResourceDictionary Source="Styles/MainStyles.xaml"/>
+                <ResourceDictionary Source="Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="Styles/TextStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
